2004-08-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSComboBoxCell.m (-completedString:):  Handle a nil
	substring by returning nil directly without trying to find a
	match. Patch by Andreas Hoeschler <ahoesch@smartsoft.de>.
	Changed data source error messages to consistent wording.
	
2004-08-13  Quentin Mathe <qmathe@club-internet.fr>
        
	* Source/NSComboBoxCell.m:
	* Source/NSComboBox.m:
	Fixed broken combo box behavior introduced June 17 with version 1.27,
	which produced wrong tracking in the button cell and extra mouse down
	call in the NSComboBox superclass. Now the rewritten version is also
	documented. 
	Also now -[GSComboWindow deselectItemAtIndex:] still produces a
	-[GSComboWindow tableViewSelectionDidChange:] call but the chain is
	stopped in -[GSComboWindow validateSelection] by the _locationSelection
	variable, then -[NSComboBoxCell selectItemAtIndex:] is not anymore
	wrongly called.
	
2004-08-12 01:42  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m
	(-textStorage:edited:range:changeInLength:invalidatedRange:):
	Adjust the selected range even if there's no length change. Change
	the handling of the in/in case. Set the selected range using a text
	view if we have any attached.
	* Source/NSTextView.m (-insertText:): Don't set the selected range.
	(-setSelectedRange:affinity:stillSelecting:): Clamp the old range
	to the length of the text.
	* Source/NSTextView_actions.m (-deleteForward:, -deleteBackward:):
	Don't set the selected range.

2004-08-11 21:35  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSButtonCell.m (-drawInteriorWithFrame:inView:): Move
	text back down by 2 points for NSImageAbove.

2004-08-10 02:01  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSLayoutManager.m (-usedRectForTextContainer:): Fix
	the calculation of the used rectangle.

2004-08-10 00:47  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSAttributedString.m (cache_init, cache_init_real): Add
	missing void:s.
